MXS-4430 Handle ETL lost connection to server error while fetching schemas
If it loses connection to the server during the query to obtain
schemas in the `Objects Selection` stage, it should display a dialog
asking the users to reconnect or disconnect, similar to what is
displayed for the query editor.

--- a/maxgui/share/locales/en.json
+++ b/maxgui/share/locales/en.json
@@ -192,6 +192,7 @@
             "emptyMigrationObj": "Objects to be migrated must be specified",
             "etl_create_stage": "No data has been migrated as certain objects could not be created. Examine the output messages, make any necessary changes to the script, then restart it.",
             "etlCanceledFailed": "Failed to cancel ETL operation. Please check the logs for more information.",
+            "etlReconnFailed": "Reconnection attempt failed.",
             "failedToConnectTo": "Failed to connect to {0}.",
             "failedToExeAction": "Failed to {action}",
             "failedToExeStatements": "Failed to execute SQL statement. | Failed to execute SQL statements.",
@@ -204,13 +205,14 @@
             "nonInteger": "Accepts only integer",
             "persistentStorage": "Persistent storage maximum size reached, please navigate to History/Snippets tab and delete some to create more space.",
             "portSocket": "Either port or socket need to be defined",
-            "reconnFailed": "Reconnection attempt failed. Please delete the active query tab and create a new one.",
+            "queryTabReconnFailed": "Reconnection attempt failed. Please delete the active query tab and create a new one.",
             "refreshLater": "Please refresh in a few moments",
             "requiredCatalog": "Catalog must be defined for generic ODBC.",
             "requiredDb": "Database must be defined for the chosen driver.",
             "requiredInput": "{inputName} is required",
             "retrieveSchemaObj": "Failed to retrieve schema objects from source.",
             "scriptCanNotBeEmpty": "Script can not be empty",
+            "serverHasGoneAway": "Server has gone away",
             "serviceUnavailable": "MaxScale is temporarily unavailable",
             "wrongCredentials": "Incorrect password or username"
         },
